[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://src/img/icons/Manu.png" type="Texture" id=2]
[ext_resource path="res://src/img/icons/dinero2.png" type="Texture" id=3]
[ext_resource path="res://src/fonts/ARLRDBD.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://src/scripts/ScrollScript.gd" type="Script" id=5]
[ext_resource path="res://src/img/icons/basic_server2.png" type="Texture" id=6]
[ext_resource path="res://src/img/icons/EssentialIconsSettings.png" type="Texture" id=7]
[ext_resource path="res://src/img/icons/powerbutton.png" type="Texture" id=8]
[ext_resource path="res://src/img/icons/EssentialIconsBarGraph.png" type="Texture" id=9]
[ext_resource path="res://src/img/icons/inversiones.png" type="Texture" id=10]
[ext_resource path="res://src/img/icons/dinero.png" type="Texture" id=11]
[ext_resource path="res://src/img/icons/ingresos.png" type="Texture" id=12]
[ext_resource path="res://src/img/icons/Plus.png" type="Texture" id=13]
[ext_resource path="res://src/fonts/untitledfont5.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://src/img/icons/basic_calculator.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 120
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
shadow_size = 20

[sub_resource type="Animation" id=15]
resource_name = "plusHide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Plus:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plus:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "plusShow"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Plus:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plus:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=9]
size = 63
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 63
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1080, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.568627 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options/NavbarL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -800, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options/Background/ExitOptions:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1080, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0.176471, 0 ), Color( 0, 0, 0, 0.568627 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Background:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options/NavbarL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -800, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options/Background/ExitOptions:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Main" type="Node" groups=[
"main",
]]
script = ExtResource( 1 )

[node name="Main" type="CanvasLayer" parent="."]

[node name="BackgroundMain" type="ColorRect" parent="Main"]
anchor_top = -0.000292333
anchor_right = 1.0
anchor_bottom = 0.999708
color = Color( 1, 1, 1, 0.87451 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Header" type="Control" parent="Main"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Main/Header"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_right = 540.0
margin_bottom = 150.0
color = Color( 0.188235, 0.247059, 0.623529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreButton" type="TextureButton" parent="Main/Header"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.042
margin_top = 24.0416
margin_right = -24.0416
margin_bottom = 127.042
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Main/Header"]
margin_right = 150.0
margin_bottom = 150.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "d"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Control" parent="Main"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontContent" type="Control" parent="Main"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="Control" parent="Main"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="Main/Bar"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 360.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Main/Bar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -120.0
margin_right = 180.0
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "O"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Main/Bar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -120.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="ColorRect" parent="Main/Bar"]
margin_left = 360.0
margin_top = -10.0
margin_right = 720.0
color = Color( 0.0156863, 0.698039, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="Main/Bar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.075
margin_top = -421.014
margin_right = -15.0747
margin_bottom = -154.014
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
icon = ExtResource( 13 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/Bar"]
anims/plusHide = SubResource( 15 )
anims/plusShow = SubResource( 14 )

[node name="Options" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="Options"]
margin_left = -1080.0
margin_bottom = 1920.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitOptions" type="TextureButton" parent="Options/Background"]
margin_left = -1080.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavbarL" type="Control" parent="Options"]
anchor_bottom = 1.0
margin_left = -800.0
margin_right = -800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Options/NavbarL"]
margin_right = 800.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Options/NavbarL/ColorRect"]
margin_left = 29.0
margin_top = 15.0
margin_right = 781.0
margin_bottom = 1920.0
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options/NavbarL/ColorRect/ScrollContainer"]
margin_bottom = 1400.0
custom_constants/separation = 140

[node name="Home" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Home"]
margin_top = 51.0
margin_right = 763.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Checkout Counter"
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separador" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 140.0
margin_bottom = 140.0

[node name="ColorRect" type="ColorRect" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Separador"]
margin_top = 139.0
margin_right = 750.0
margin_bottom = 141.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingresos" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 280.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingresos" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Ingresos"]
margin_top = 49.3182
margin_right = 593.0
margin_bottom = 189.318
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ingresos"
icon = ExtResource( 12 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gastos" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 420.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gastos" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Gastos"]
margin_left = -13.773
margin_top = 49.0
margin_right = 739.227
margin_bottom = 189.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 12
text = "Gastos personales"
icon = ExtResource( 11 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inversiones" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 560.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inversiones" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Inversiones"]
margin_top = 49.3182
margin_right = 593.0
margin_bottom = 189.318
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Inversiones"
icon = ExtResource( 10 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Semana" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 700.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="semana" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Semana"]
margin_top = 49.3182
margin_right = 593.0
margin_bottom = 189.318
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "La semana"
icon = ExtResource( 9 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 840.0
margin_bottom = 840.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Base"]
margin_top = 49.3182
margin_right = 593.0
margin_bottom = 189.318
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Base de datos"
icon = ExtResource( 6 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Calculadora" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 980.0
margin_bottom = 980.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Calculadora" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Calculadora"]
margin_top = 49.3182
margin_right = 593.0
margin_bottom = 189.318
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Calculadora"
icon = ExtResource( 15 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 1120.0
margin_bottom = 1120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Opciones"]
margin_top = 51.0
margin_right = 593.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opciones"
icon = ExtResource( 7 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separador2" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 1260.0
margin_bottom = 1260.0

[node name="ColorRect" type="ColorRect" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Separador2"]
margin_top = 90.0
margin_right = 750.0
margin_bottom = 92.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="Control" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 1400.0
margin_bottom = 1400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="Button" parent="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Salir"]
margin_right = 593.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Salir"
icon = ExtResource( 8 )
flat = true
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/navbarHide = SubResource( 11 )
anims/navbarShow = SubResource( 12 )
[connection signal="pressed" from="Main/Header/MoreButton" to="." method="_on_MoreButton_pressed"]
[connection signal="pressed" from="Main/Header/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Main/Bar/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Options/Background/ExitOptions" to="." method="_on_ExitOptions_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Home/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Ingresos/Ingresos" to="." method="_on_Ingresos_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Gastos/Gastos" to="." method="_on_Gastos_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Inversiones/Inversiones" to="." method="_on_Inversiones_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Semana/semana" to="." method="_on_semana_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Base/Base" to="." method="_on_Base_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Calculadora/Calculadora" to="." method="_on_Calculadora_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Opciones/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="Options/NavbarL/ColorRect/ScrollContainer/VBoxContainer/Salir/Salir" to="." method="_on_Salir_pressed"]
